# raytracer-cpp

./: CMakeLists.txt  README.md
include/: Camera.h  Canvas.h  Constants.h  Lights.h  Maths.h  Matrix.h  RayTracer.h  Sphere.h  ThreadPool.h  Utils.h  Vec.h
src/: Camera.cpp  Canvas.cpp  Maths.cpp  Matrix.cpp  RayTracer.cpp  Sphere.cpp  ThreadPool.cpp  Utils.cpp  Vec.cpp  main.cpp
