cmake_minimum_required(VERSION 4.2)
project(cpp_tests)

include(FetchContent)

set(CMAKE_CXX_STANDARD 20)

function(include_dependency libName gitUrl gitTag)
    FetchContent_Declare(
            ${libName}
            GIT_REPOSITORY ${gitUrl}
            GIT_TAG    ${gitTag}
            GIT_SHALLOW TRUE
            GIT_PROGRESS TRUE
    )
    FetchContent_MakeAvailable(${libName})
endfunction()

set(LIB1 raylib)
find_package(${LIB1} QUIET)
if (NOT ${LIB1}_FOUND)
    include_dependency(${LIB1} https://github.com/raysan5/raylib.git 6.0)
endif()

add_executable(${PROJECT_NAME} src/main.cpp)

target_link_libraries(${PROJECT_NAME} PRIVATE ${LIB1})